--- a/2025講義日程と宿題.md
+++ b/2025講義日程と宿題.md
@@ -35,12 +35,15 @@
 1. Anaconda と QuantLib をインストールし、テキスト p.23`図1.17`のコードを実行
 2. Excel で`図1.17`と同じ数値を再現し、計算結果を確認
 3. 上記 1・2 の実行画面（スクリーンショット）を提出
----
-
 
 ### 2. TONA スワップのフェアレートとデイリーコンパウンド
 
-1. QuantLib でテキスト p.85「図3.5」を再現し、Bloomberg の計算結果と比較する。
-2. p.85「図3.6」に掲載のフェアレートを Excel で算出する。
-3. p.87「図3.7」の計算過程を用い、デイリーコンパウンド方式によるフェアレートを算出する。
----
+1. QuantLib でテキスト p.85`図3.5`を再現し、Bloomberg の計算結果と比較
+2. p.85`図3.6`に掲載のフェアレートを Excel で算出
+3. p.87`図3.7`の計算過程を用い、デイリーコンパウンド方式によるフェアレートを算出
+
+### 3. ASWの計算
+
+1. テキスト p.135 `図4.17`のTONAアニュイティとASスプレッドをExcelで再現
+2. MITHCC 0.37債のクリーン価格=90の場合のBBG ASWスクショと`図4.17`を修正した計算結果を提出
+3. なぜ Z-SpreadとASスプレッドが大きく異なるかの理由を説明
