--- a/2025講義日程と宿題.md
+++ b/2025講義日程と宿題.md
@@ -42,8 +42,8 @@
 2. p.85`図3.6`に掲載のフェアレートを Excel で算出
 3. p.87`図3.7`の計算過程を用い、デイリーコンパウンド方式によるフェアレートを算出
 
-### 3. ASWの計算
+### 3. ASスプレッドの計算
 
 1. テキスト p.135 `図4.17`のTONAアニュイティとASスプレッドをExcelで再現
-2. MITHCC 0.37債のクリーン価格=90の場合のBBG ASWスクショと`図4.17`を修正した計算結果を提出
+2. MITHCC 0.37債のクリーン価格=90.0の場合で、BBG ASWスクショと`図4.17`を修正した計算結果を提出 &nbsp;&nbsp;&nbsp; (取引日、決済日は不変)
 3. なぜ Z-SpreadとASスプレッドが大きく異なるかの理由を説明
