--- a/2025講義日程と宿題.md
+++ b/2025講義日程と宿題.md
@@ -3,14 +3,14 @@
 
 **土曜午後　2時40分～5時50分（90分×2コマ／休憩10分）**
 
-1. **11/29**　Ibor スワップ、RFR スワップ
-2. **12/06**　アセットスワップ、Zスプレッド、物価連動債、インフレスワップ
+1. **11/29**　Ibor スワップ、
+2. **12/06**　RFR スワップ、Zスプレッド、アセットスワップ、
 3. **12/13**　クレジット・デフォルト・スワップ（CDS）
 4. **12/20**　Black モデル、Normal モデル、インプライド・ボラティリティ（IV）
 5. &nbsp;&nbsp;**1/10**　スワップション、SABR モデル、Cap、Floor
 6. &nbsp;&nbsp;**1/17**　Hull–White モデル、ツリー、アメリカン・モンテカルロ
 7. &nbsp;&nbsp;**1/24**　VIX、バリアンススワップ
-8. &nbsp;&nbsp;**1/31（3限のみ）**　ポートフォリオ、VaR（未定）
+8. &nbsp;&nbsp;**1/31（3限のみ）**　物価連動債、インフレスワップ、ポートフォリオ、VaR（未定）
 
 
 
@@ -47,3 +47,13 @@
 1. テキスト p.135 `図4.17`のTONAアニュイティとASスプレッドをExcelで再現
 2. MITHCC 0.37債のクリーン価格=90.0の場合で、BBG ASWスクショと`図4.17`を修正した計算結果を提出 &nbsp;&nbsp;&nbsp; (取引日、決済日は不変)
 3. なぜ Z-SpreadとASスプレッドが大きく異なるかの理由を説明
+
+### 4. CDS
+1. 式(10.9)の導出に関して、テキスト10.5.3節ではディスカウントレート0%で説明したが、この制限は取り除くことができる。chatGPTによる「ハザードレート近似式.pdf」ではよりスマートな導出法が示されている。
+まず、このpdfを一読後、その2節に記載された次式の"時刻 $t$ にデフォルトする確率密度"の導出が宿題。
+  $$f(t) = \mathbb{Q}(\tau \in [t, t+dt)) = \lambda e^{-\lambda t} \, dt$$
+
+2. 余力があれば、テキスト10.5.3節を理解しよう。
+   * 上式はテキストの式(10.31)や式(10.33)と同じ式
+   * 10.5.3節は倒産時刻 $\tau$ を数式で扱う良い例題
+     * (加えて、密度関数の考え方も重要)
