--- a/2025講義日程と宿題.md
+++ b/2025講義日程と宿題.md
@@ -49,8 +49,8 @@
 3. なぜ Z-SpreadとASスプレッドが大きく異なるかの理由を説明
 
 ### 4. CDS
-1. 式(10.9)の導出に関して、テキスト10.5.3節ではディスカウントレート0%で説明したが、この制限は取り除くことができる。chatGPTによる「ハザードレート近似式.pdf」ではよりスマートな導出法が示されている。
-まず、このpdfを一読後、その2節に記載された次式の"時刻 $t$ にデフォルトする確率密度"の導出が宿題。
+1. 式(10.9)の導出に関して、テキスト10.5.3節ではディスカウントレート0%で説明ているが、この制限は取り除くことができる。添付した「ハザードレート近似式.pdf」ではよりスマートな導出法が示されている。
+まず、このpdfを一読後、その2節に記載された次式の"時刻 $t$ にデフォルトする確率密度"を算出することを宿題とする。
   $$f(t) = \mathbb{Q}(\tau \in [t, t+dt)) = \lambda e^{-\lambda t} \, dt$$
 
 2. 余力があれば、テキスト10.5.3節を理解しよう。
