--- a/2025講義日程と宿題.md
+++ b/2025講義日程と宿題.md
@@ -46,7 +46,7 @@
 
 1. テキスト p.135 `図4.17`のTONAアニュイティとASスプレッドをExcelで再現
 2. MITHCC 0.37債のクリーン価格=90.0の場合で、BBG ASWスクショと`図4.17`を修正した計算結果を提出 &nbsp;&nbsp;&nbsp; (取引日、決済日は不変)
-3. なぜ Z-SpreadとASスプレッドが大きく異なるかの理由を説明
+3. ~~なぜ Z-SpreadとASスプレッドが大きく異なるかの理由を説明~~
 
 ### 4. CDS
 1. 式(10.9)の導出に関して、テキスト10.5.3節ではディスカウントレート0%で説明ているが、この制限は取り除くことができる。添付した「ハザードレート近似式.pdf」ではよりスマートな導出法が示されている。
@@ -56,4 +56,5 @@
 2. 余力があれば、テキスト10.5.3節を理解しよう。
    * 上式はテキストの式(10.31)や式(10.33)と同じ式
    * 10.5.3節は倒産時刻 $\tau$ を数式で扱う良い例題
+
      * (加えて、密度関数の考え方も重要)
