--- a/2025講義日程と宿題.md
+++ b/2025講義日程と宿題.md
@@ -6,8 +6,8 @@
 1. **11/29**　Ibor スワップ、
 2. **12/06**　RFR スワップ、Zスプレッド、アセットスワップ、
 3. **12/13**　クレジット・デフォルト・スワップ（CDS）
-4. **12/20**　Black モデル、Normal モデル、インプライド・ボラティリティ（IV）
-5. &nbsp;&nbsp;**1/10**　スワップション、SABR モデル、Cap、Floor
+4. **12/20**　Black モデル
+5. &nbsp;&nbsp;**1/10**　Normal モデル、SABR モデル
 6. &nbsp;&nbsp;**1/17**　Hull–White モデル、ツリー、アメリカン・モンテカルロ
 7. &nbsp;&nbsp;**1/24**　VIX、バリアンススワップ
 8. &nbsp;&nbsp;**1/31（3限のみ）**　物価連動債、インフレスワップ、ポートフォリオ、VaR（未定）
@@ -58,3 +58,8 @@
    * 10.5.3節は倒産時刻 $\tau$ を数式で扱う良い例題
 
      * (加えて、密度関数の考え方も重要)
+
+### 5. Blackモデル
+1. 伊藤の公式を使い、ブラックモデル式(6.3)を式(6.24)へ変形する計算過程のスクショを提出（手書きで構わない）
+2. 図6.13で、nPATHの値を大きくし、解析解に近い値となるoptionNPVのスクショを提出
+3. 2の場合の図6.15のスクショを提出
