--- a/2025講義日程と宿題.md
+++ b/2025講義日程と宿題.md
@@ -60,6 +60,8 @@
      * (加えて、密度関数の考え方も重要)
 
 ### 5. Blackモデル
-1. 伊藤の公式を使い、ブラックモデル式(6.3)を式(6.24)へ変形する計算過程のスクショを提出（手書きで構わない）
+1. 伊藤の公式を使い、ブラックモデル式(6.3)を式(6.24)へ変形する計算過程のスクショを提出（手書きで構わないが、チャッピーのmdファイル等でも可）
 2. 図6.13で、nPATHの値を大きくし、解析解に近い値となるoptionNPVのスクショを提出
 3. 2の場合の図6.15のスクショを提出
+4. Longstaff Schwartz (2001) "Valuing American Options by Simulation"の数値例の120ページで計算されたアメリカンプット 0.1144の値をエクセルで再現し、提出
+
