--- a/2025講義日程と宿題.md
+++ b/2025講義日程と宿題.md
@@ -67,14 +67,15 @@
 
 ### 6. スワップション
 
-1. テキスト p.242 図7.13 に対応する1y x 3yスワップションのSWPMスクリーンとVCUBスクリーンを表示し、提出
+1. BBGスクショ 図7.11 (テキスト p.242 図7.13) に対応する1y x 3yスワップションのSWPMスクリーンとVCUBスクリーンを表示させ、提出
 2. 図7.13のパラメータを修正し、NPVとアニュイティをQuantLibで算出 `(1y x 3y スワップレートはSWPMのレートを使用)`
 3. 図7.11(p.239) エクセルのパラメータを修正し、NPVとグリークスを算出し、SWPMスクリーンと比較 `(1y x 3y スワップレートはSWPMのレート、アニュイティはQuantLibの値を使用。同図 E～I列は計算不要)`
 
 ### 7. Sabrモデル
 
 1. テキスト p.274 表8.2で使用したIvarssonの論文にあるデータの 5y x 5y スマイル に対して、±100bpでSabrモデルをキャリブレートし、図8.15 のグラフを作成
-2. 図8.15 の2つ目のセルと同様に、±200bpのボラティリティーを計算し、論文のデータと比較
+2. 図8.15 の2つ目のセルと同様に、1.で算出したパラメータを基に、±200bpのボラティリティーを計算し、論文のデータと比較
+
 
 
 
