--- a/2025講義日程と宿題.md
+++ b/2025講義日程と宿題.md
@@ -76,6 +76,12 @@
 1. テキスト p.274 表8.2で使用したIvarssonの論文にあるデータの 5y x 5y スマイル に対して、±100bpでSabrモデルをキャリブレートし、図8.15 のグラフを作成
 2. 図8.15 の2つ目のセルと同様に、1.で算出したパラメータを基に、±200bpのボラティリティーを計算し、論文のデータと比較
 
+### 8. Hall-Whiteモデル
+
+1. テキスト 9.1節(p.279) の数値例で、Non Call を3年とした場合のコーラブル債の価格とバミューダンスワップションの価格を計算したスクショの提出
+2. テキストの例の1年NCと比較し、どのような理由で価格が異なるかを説明
+
+
 
 
 
