--- a/2025講義日程と宿題.md
+++ b/2025講義日程と宿題.md
@@ -81,7 +81,16 @@
 1. テキスト 9.1節(p.279) の数値例で、Non Call を3年とした場合のコーラブル債の価格とバミューダンスワップションの価格を計算したスクショの提出
 2. テキストの例の1年NCと比較し、どのような理由で価格が異なるかを説明
 
+## 【自由研究】
 
+### 1. ハザードレートの推定
+
+* テキスト 10.2.3節の数値例を理解し、このレポジトリにある「R&I 日本企業のデフォルト率・格付推移行列」を利用して、実際のハザードレートを推定する
+
+### 2. 金利スワップの変動レグの数理
+
+* テキスト p.41にある「変動レグの時価は本来計算できないが、...」と「同様に$I_{1.5}, I_2$は$f_{1.5}, f_2$で代用」という記述の数学的な根拠として、レポジトリの「p41の"代用"の根拠bychatGPT-IRS-floatLEG」がチャッピーの説明である。まず この説明を理解しよう
+* 次に割引カーブがIBORではなく、RFRとなると、上の"代用"ができなくなる理由を説明しよう
 
 
 
