--- a/2025講義日程と宿題.md
+++ b/2025講義日程と宿題.md
@@ -6,7 +6,7 @@
 1. **11/29**　Ibor スワップ、
 2. **12/06**　RFR スワップ、Zスプレッド、アセットスワップ、
 3. **12/13**　クレジット・デフォルト・スワップ（CDS）
-4. **12/20**　Black モデル、ツリー、アメリカン・モンテカルロ
+4. **12/20**　Black モデル、アメリカンオプション
 5. &nbsp;&nbsp;**1/10**　Normal モデル、SABR モデル
 6. &nbsp;&nbsp;**1/17**　Hull–White モデル
 7. &nbsp;&nbsp;**1/24**　VIX、バリアンススワップ
@@ -95,6 +95,9 @@
 
 * テキスト p.41にある「変動レグの時価は本来計算できないが、...」と「同様に$I_{1.5}, I_2$は$f_{1.5}, f_2$で代用」という記述の数学的な根拠として、レポジトリの「p41の"代用"の根拠bychatGPT-IRS-floatLEG」がチャッピーの説明である。まず この説明を理解しよう
 * 次に割引カーブがIBORではなく、RFRとなると、上の"代用"ができなくなる理由を説明しよう
+
+### 3. VIX white paperの数値の手計算
+
 
 
 
