--- a/2025講義日程と宿題.md
+++ b/2025講義日程と宿題.md
@@ -1,5 +1,5 @@
 
-## 2025年　日程（後期Ⅱ）
+## 2025年 「Bloombergを活用した定量分析」日程（後期Ⅱ）
 
 **土曜午後　2時40分～5時50分（90分×2コマ／休憩10分）**
 
@@ -97,6 +97,7 @@
 * 次に割引カーブがIBORではなく、RFRとなると、上の"代用"ができなくなる理由を説明しよう
 
 ### 3. VIX white paperの数値の手計算
+
 
 
 
